--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
   <footer>
     <p>Enjoy your music!</p>
+    <p>Heavily inspired by <a href="https://favoritemusic.guru">favoritemusic.guru</a>, but its now broken :(</p>
     <p>Made by <a href="https://lucas.tools">Lucas.tools</a></p>
     <a href="https://www.buymeacoffee.com/lucasobe" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important;" ></a>
   </footer>
